# DWES-UT04_Practica_2025-2026

./: README.md  pyproject.toml
practicaUT04/: manage.py
practicaUT04/practicaUT04/: asgi.py  settings.py  urls.py  wsgi.py
practicaUT04/tareas/: forms.py  models.py  urls.py  views.py
practicaUT04/tareas/migrations/: 0001_initial.py  0002_profesor.py  0003_tarea.py
practicaUT04/tareas/templates/tareas/: alta_alumno.html  alta_profesor.html  crear_tarea.html  detalle_alumno.html  detalle_profesor.html  detalle_tarea.html  listar_alumnos.html  listar_profesores.html  listar_tareas.html  tareas_alumno.html  tareas_profesor.html
