[tool.poetry]
name = "dwes-ut04_practica_2025-2026"
version = "0.1.0"
description = ""
authors = ["boguieboo <juliacg3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "<6"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
